cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
project(AAS_practice VERSION 1.1.0.0 DESCRIPTION "Practice for algorithms and data structures." HOMEPAGE_URL "https://github.com/ntllct/AAS_practice" LANGUAGES CXX)


option(CMAKE_VERBOSE_MAKEFILE "VERBOSE MODE" OFF)
option(BUILD_CUDA_ALGOS "Build CUDA sources" OFF)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

enable_testing()

add_subdirectory(AVLTree)

if(BUILD_CUDA_ALGOS)
  enable_language(CUDA)
  include(CheckLanguage)
  check_language(CUDA)
  if(DEFINED CMAKE_CUDA_COMPILER)
    if(NOT DEFINED CMAKE_CUDA_STANDARD)
      set(CMAKE_CUDA_STANDARD 11)
      set(CMAKE_CUDA_STANDARD_REQUIRED ON)
    endif()
    include(FindCUDA/select_compute_arch)
    CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
    string(STRIP "${INSTALLED_GPU_CCS_1}" INSTALLED_GPU_CCS_2)
    string(REPLACE " " ";" INSTALLED_GPU_CCS_3 "${INSTALLED_GPU_CCS_2}")
    string(REPLACE "." "" CUDA_ARCH_LIST "${INSTALLED_GPU_CCS_3}")
    SET(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
    set_property(GLOBAL PROPERTY CUDA_ARCHITECTURES "${CUDA_ARCH_LIST}")
    add_subdirectory(CUDA_odd_even_sort)
  endif()
endif(BUILD_CUDA_ALGOS)